--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,9 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
 /* Basic */
+.servicios {
+}
+
 @-ms-viewport {
   width: device-width; }
 body {
