--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,7 +6,10 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
 /* Basic */
+
+/ * Estilos Colores */
 .servicios {
+	
 }
 
 @-ms-viewport {
